force-app/main/default/objects/PPF__c/PPF__c.object-meta.xml
<CustomObject>
    <label>PPF</label>
    <nameField>
        <label>PPF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>