force-app/main/default/objects/PPF__c/fields/Invested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invested_Amount__c</fullName>
    <label>Invested Amount</label>
    <summarizedField>PPF_Transaction__c.Amount__c</summarizedField>
    <summaryForeignKey>PPF_Transaction__c.PPF_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>