force-app/main/default/objects/PPF__c/fields/Parent_Bank__c.field-meta.xml
<CustomField>
    <fullName>Parent_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>PPFs</relationshipLabel>
    <relationshipName>PPFs</relationshipName>
    <type>Lookup</type>
</CustomField>